# PRA_Tool

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  read_yaml.py  run.bat  run.py  test.ipynb
config/: general.yaml  pipeline.yaml  secret.example.yaml
data/: engine.json
docs/: login.excalidraw
installer/: install_poetry.bat
manual/: README.md
src/: scraping.py
utils/: utils.py
