[tool.poetry]
name = "rpa-tool"
version = "0.1.0"
description = ""
authors = ["SotaChambers <snakamura@ridge-i.com>"]
packages = [{include = "rpa_tool"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
pydantic = "^2.0"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
selenium = "^4.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
